# memovex

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: compare_engines.py  locomo_eval.py  locomo_real.py  memory_router_async.py  musique_eval.py  musique_real.py  plot_comparison.py  run_benchmarks.py  run_eval.py  runner.py
benchmarks/results/: benchmark_20260427_220136.json  benchmark_latest.json  memory_router_async.json  real_llm_latest.json
config/: memorybank.yaml  providers.yaml
docker/: Dockerfile  Dockerfile.standalone  docker-compose.standalone.yml  docker-compose.yml
docs/: INSTALL.md
memovex/: __init__.py  api.py
memovex/core/: homeostasis.py  llm_layer.py  memory_bank.py  memory_router.py  resonance_engine.py  security.py  tokenizer.py  types.py  wisdom_store.py
memovex/integrations/: __init__.py  chroma_store.py  graph_store.py  qdrant_store.py  redis_cache.py
memovex/plugins/: claude_plugin.py  hermes_plugin.py  openclaw_plugin.py
memovex/providers/: mem0_adapter.py  memobase_adapter.py  mempalace_adapter.py  reasoning_bank.py
memovex/providers/experimental/: README.md  resonant_adapter.py
plugins/: README.md
plugins/claude/: README.md  plugin.py  settings.json
plugins/claude/hooks/: memory_inject.py  memory_store.py
plugins/hermes/: README.md  plugin.py  settings.json
plugins/hermes/hooks/: memory_inject.py  memory_store.py
plugins/openclaw/: README.md  plugin.py  settings.json
plugins/openclaw/hooks/: memory_inject.py  memory_store.py
scripts/: ingest_data.py  seed_claude_memory.py  setup_docker.py  setup_plugin.py
scripts/hooks/: memory_inject.py  memory_store.py
tests/: test_api.py  test_graph_store.py  test_homeostasis.py  test_memory_bank.py  test_memory_router.py  test_memory_store.py  test_persistence_and_channels.py  test_resonance_engine.py  test_secret_hygiene.py  test_wisdom_store.py
