[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memovex"
version = "2.0.0"
description = "Multi-channel resonant memory framework for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Axis Dynamics", email = "mtorres@exis.cl"},
]
keywords = [
    "memory", "llm", "agents", "rag", "retrieval",
    "claude", "embeddings", "knowledge-graph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx>=3.2",
    "pydantic>=2.0",
]

[project.urls]
Homepage      = "https://github.com/axisdynamics/memovex"
Repository    = "https://github.com/axisdynamics/memovex"
Documentation = "https://github.com/axisdynamics/memovex/blob/main/docs/INSTALL.md"
"Bug Tracker" = "https://github.com/axisdynamics/memovex/issues"

[project.optional-dependencies]
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]
vector = ["qdrant-client>=1.8.0"]
chroma = ["chromadb>=0.4.0"]
cache = ["redis>=5.0.0"]
embeddings = ["sentence-transformers>=2.7.0"]
llm = ["openai>=1.0"]
benchmarks = ["datasets>=2.0", "huggingface-hub>=0.20"]
dev = ["pytest>=8.0", "pytest-benchmark>=4.0", "httpx>=0.26"]
all = [
    "fastapi>=0.110.0", "uvicorn[standard]>=0.27.0",
    "qdrant-client>=1.8.0", "redis>=5.0.0",
    "openai>=1.0", "datasets>=2.0", "huggingface-hub>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["memovex*"]
exclude = ["tests*", "benchmarks*", "scripts*", "plugins*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
